syntax = "proto2";

package com.laex.cg2d.model;

/* Sloot Item */
message SlootItem {
	optional string id = 1;
	optional string title = 2;
	optional string imgUrl = 3;
	optional float  price = 4;
}

/* Collection of Items */
message SlootCollection {
	optional string developerId = 1;
	optional string collectionTitle = 2;
	repeated SlootItem slootItems = 3;
}
